# RI-prediction-machine-learning

./: .gitignore  CALVIN03E_Master.csv  DOKSURI05W_Master.csv  DORA05E_Master.csv  MAWAR02W_Master.csv  OTIS18E_master.csv  PATRICIA20E_master.csv  README.md  RI_KNN_Classifier.py  RI_KNN_Classifier_deep_learning.py  RI_deep_learning_build.py  RI_deep_learning_libmodel.py  RI_deep_learning_libutils.py  RI_deep_learning_master.ipynb  RI_deep_learning_master_00h_20230816.ipynb  RI_deep_learning_master_00h_20230816.py  RI_deep_learning_master_20221120.ipynb  RI_deep_learning_master_24h_20230816.ipynb  RI_deep_learning_master_24h_20230816.py  RI_deep_learning_otis.py  RI_deep_learning_prediction_otis.py  RI_getSHIP.sh  RI_model_GRU_00h.keras  RI_model_GRU_24h.keras  RI_model_logistics_24h.keras  SHIP_AllBainsMajorHurricanes_12h.csv  SHIP_AllBasinsMaster_12h.csv  SHIP_AtlanticMajorHurricane2016-2019.csv  job_br200.sh  job_carbonate.sh  out_metric_sensitivity_0p7.txt  pyproject.toml  requirements.txt  ship_input_12h.csv  ship_input_24h.csv
data/: README.md
data/examples/: ship_input_00h.csv
data/training/: SHIP_AtlanticBasinMaster2021-2022.csv  SHIP_allbasin_2011_2022_Version3(+24hr).csv  (+3 more)
jobs/: job_br200.sh  job_carbonate.sh
models/: README.md
notebooks/: README.md  RI_KNN_Classifier.ipynb  RI_deep_learning_master.ipynb  RI_deep_learning_master_00h_20230816.ipynb  RI_deep_learning_master_20221120.ipynb  RI_deep_learning_master_24h_20230816.ipynb
results/: README.md
scripts/: README.md  fetch_ship.py  predict_otis.py  train_and_predict_otis.py  train_ri_models.py
(+9 files in other folders)
